POWR-398 Fix a missed permission for group member on content overview

--- a/web/sites/default/config/group.role.project-member.yml
+++ b/web/sites/default/config/group.role.project-member.yml
@@ -14,60 +14,61 @@ permissions_ui: true
 permissions:
   0: 'view group'
   1: 'leave group'
-  3: 'delete own group_node:news entity'
-  4: 'update any group_node:news entity'
-  5: 'update own group_node:news entity'
-  6: 'view group_node:news entity'
-  7: 'view unpublished group_node:news entity'
-  8: 'create group_node:city_service entity'
-  10: 'delete own group_node:city_service entity'
-  11: 'update any group_node:city_service entity'
-  12: 'update own group_node:city_service entity'
-  13: 'view group_node:city_service entity'
-  14: 'view unpublished group_node:city_service entity'
-  16: 'delete own group_node:guide entity'
-  17: 'update any group_node:guide entity'
-  18: 'update own group_node:guide entity'
-  19: 'view group_node:guide entity'
-  20: 'view unpublished group_node:guide entity'
-  22: 'delete own group_node:information entity'
-  23: 'update any group_node:information entity'
-  24: 'update own group_node:information entity'
-  25: 'view group_node:information entity'
-  26: 'view unpublished group_node:information entity'
-  28: 'delete own group_node:event entity'
-  29: 'update any group_node:event entity'
-  30: 'update own group_node:event entity'
-  31: 'view group_node:event entity'
-  32: 'view unpublished group_node:event entity'
-  33: 'create group_node:notification entity'
-  35: 'delete own group_node:notification entity'
-  36: 'update any group_node:notification entity'
-  37: 'update own group_node:notification entity'
-  38: 'view group_node:notification entity'
-  39: 'view unpublished group_node:notification entity'
-  40: 'create group_media:audio entity'
-  42: 'delete own group_media:audio entity'
-  43: 'update any group_media:audio entity'
-  44: 'update own group_media:audio entity'
-  45: 'view group_media:audio entity'
-  46: 'view unpublished group_media:audio entity'
-  47: 'create group_media:document entity'
-  49: 'delete own group_media:document entity'
-  50: 'update any group_media:document entity'
-  51: 'update own group_media:document entity'
-  52: 'view group_media:document entity'
-  53: 'view unpublished group_media:document entity'
-  54: 'create group_media:image entity'
-  56: 'delete own group_media:image entity'
-  57: 'update any group_media:image entity'
-  58: 'update own group_media:image entity'
-  59: 'view group_media:image entity'
-  60: 'view unpublished group_media:image entity'
-  61: 'create group_media:video entity'
-  63: 'delete own group_media:video entity'
-  64: 'update any group_media:video entity'
-  65: 'update own group_media:video entity'
-  66: 'view group_media:video entity'
-  67: 'view unpublished group_media:video entity'
-  68: 'access group_media overview'
+  2: 'delete own group_node:news entity'
+  3: 'update any group_node:news entity'
+  4: 'update own group_node:news entity'
+  5: 'view group_node:news entity'
+  6: 'view unpublished group_node:news entity'
+  7: 'create group_node:city_service entity'
+  8: 'delete own group_node:city_service entity'
+  9: 'update any group_node:city_service entity'
+  10: 'update own group_node:city_service entity'
+  11: 'view group_node:city_service entity'
+  12: 'view unpublished group_node:city_service entity'
+  13: 'delete own group_node:guide entity'
+  14: 'update any group_node:guide entity'
+  15: 'update own group_node:guide entity'
+  16: 'view group_node:guide entity'
+  17: 'view unpublished group_node:guide entity'
+  18: 'delete own group_node:information entity'
+  19: 'update any group_node:information entity'
+  20: 'update own group_node:information entity'
+  21: 'view group_node:information entity'
+  22: 'view unpublished group_node:information entity'
+  23: 'delete own group_node:event entity'
+  24: 'update any group_node:event entity'
+  25: 'update own group_node:event entity'
+  26: 'view group_node:event entity'
+  27: 'view unpublished group_node:event entity'
+  28: 'create group_node:notification entity'
+  29: 'delete own group_node:notification entity'
+  30: 'update any group_node:notification entity'
+  31: 'update own group_node:notification entity'
+  32: 'view group_node:notification entity'
+  33: 'view unpublished group_node:notification entity'
+  34: 'create group_media:audio entity'
+  35: 'delete own group_media:audio entity'
+  36: 'update any group_media:audio entity'
+  37: 'update own group_media:audio entity'
+  38: 'view group_media:audio entity'
+  39: 'view unpublished group_media:audio entity'
+  40: 'create group_media:document entity'
+  41: 'delete own group_media:document entity'
+  42: 'update any group_media:document entity'
+  43: 'update own group_media:document entity'
+  44: 'view group_media:document entity'
+  45: 'view unpublished group_media:document entity'
+  46: 'create group_media:image entity'
+  47: 'delete own group_media:image entity'
+  48: 'update any group_media:image entity'
+  49: 'update own group_media:image entity'
+  50: 'view group_media:image entity'
+  51: 'view unpublished group_media:image entity'
+  52: 'create group_media:video entity'
+  53: 'delete own group_media:video entity'
+  54: 'update any group_media:video entity'
+  55: 'update own group_media:video entity'
+  56: 'view group_media:video entity'
+  57: 'view unpublished group_media:video entity'
+  58: 'access group_media overview'
+  86: 'access group_node overview'
