POWR-620 - fixed config issues with media embed, reconfigured browser to work like other browsers.

--- a/web/sites/default/config/entity_browser.browser.media_browser.yml
+++ b/web/sites/default/config/entity_browser.browser.media_browser.yml
@@ -19,7 +19,7 @@ display_configuration:
   auto_open: true
 selection_display: no_display
 selection_display_configuration: {  }
-widget_selector: tabs
+widget_selector: single
 widget_selector_configuration: {  }
 widgets:
   8b142f33-59d1-47b1-9e3a-4ae85d8376fa:
