--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
+    - entity_embed
     - htmlpurifier
 name: 'Simplified editor with media embed'
 format: simplified_editor_with_media_embed
@@ -14,7 +15,7 @@ filters:
     status: true
     weight: -10
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <hr> <sup> <sub> <s> <a href hreflang !href accesskey id rel target title> <img src alt data-entity-type data-entity-uuid> <drupal-entity data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button>'
+      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <hr> <sup> <sub> <s> <a href hreflang !href accesskey id rel target title> <img src alt data-entity-type data-entity-uuid> <drupal-entity data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button alt title>'
       filter_html_help: true
       filter_html_nofollow: false
   htmlpurifier:
@@ -24,3 +25,9 @@ filters:
     weight: 0
     settings:
       htmlpurifier_configuration: "AutoFormat:\r\n  RemoveEmpty.RemoveNbsp.Exceptions:\r\n    td: true\r\n    th: true\r\n  RemoveEmpty.RemoveNbsp: true\r\n  RemoveEmpty: true\r\n  RemoveSpansWithoutAttributes: false"
+  entity_embed:
+    id: entity_embed
+    provider: entity_embed
+    status: true
+    weight: 0
+    settings: {  }
