POWR-620 - Turned off "require this relationship" on the Group relationship in entity browsers, since it would cause any global media created outside of a group to be unavailable.

--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -1732,7 +1732,7 @@ display:
           relationship: group_content
           group_type: group
           admin_label: Group
-          required: true
+          required: false
           entity_type: group_content
           entity_field: gid
           plugin_id: standard
@@ -3959,7 +3959,7 @@ display:
           relationship: group_content
           group_type: group
           admin_label: Group
-          required: true
+          required: false
           entity_type: group_content
           entity_field: gid
           plugin_id: standard
@@ -4837,7 +4837,7 @@ display:
           relationship: group_content
           group_type: group
           admin_label: Group
-          required: true
+          required: false
           entity_type: group_content
           entity_field: gid
           plugin_id: standard
@@ -5754,7 +5754,7 @@ display:
           relationship: group_content
           group_type: group
           admin_label: Group
-          required: true
+          required: false
           entity_type: group_content
           entity_field: gid
           plugin_id: standard
