POWR-620 enabled style dropdown in CKEditor and added Button Link style

--- a/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
@@ -19,6 +19,7 @@ settings:
             - Italic
             - Blockquote
             - Format
+            - Styles
         -
           name: Lists
           items:
@@ -32,7 +33,7 @@ settings:
         -
           name: Media
           items:
-            - DrupalImage
+            - media_browser
         -
           name: Tools
           items:
@@ -44,15 +45,11 @@ settings:
             - RemoveFormat
             - PasteFromWord
             - PasteText
-        -
-          name: Embeds
-          items:
-            - media_browser
   plugins:
     language:
       language_list: un
     stylescombo:
-      styles: ''
+      styles: 'a.btn-cta-outline|Link Button'
     linkit:
       linkit_profile: ''
 image_upload:
