Update the search blocks to default to override from there.

--- a/web/sites/default/config/block.block.searchapipagesearchblockform.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockform.yml
@@ -1,27 +1,26 @@
-uuid: 11ee9388-c923-4f30-9cf2-1449596c2152
+uuid: cce0fbb2-6fff-4853-87f1-4c4cfd8b183b
 langcode: en
 status: true
 dependencies:
   config:
     - search_api_page.search_api_page.search_portland_gov
   module:
-    - portland
+    - search_api_page
     - system
   theme:
     - tweme
-id: searchapipagesearchblockformwithportlandstyle_3
+id: searchapipagesearchblockform
 theme: tweme
 region: header_form
 weight: 0
 provider: null
-plugin: portland_search_block
+plugin: search_api_page_form_block
 settings:
-  id: portland_search_block
-  label: 'Search Api Page search block form with Portland style'
-  provider: portland
-  label_display: '0'
+  id: search_api_page_form_block
+  label: 'Search Portland.gov'
+  provider: search_api_page
+  label_display: visible
   search_api_page: search_portland_gov
-  size: small
 visibility:
   request_path:
     id: request_path
