--- a/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
@@ -11,7 +11,7 @@ dependencies:
     - views.view.topics
   module:
     - panels
-    - portland
+    - search_api_page
     - views
 id: frontpage-panels_variant-0
 label: Panels
@@ -51,17 +51,6 @@ variant_settings:
       weight: 2
       uuid: 6a81d56b-108f-452f-aba2-2e297d16af6d
       context_mapping: {  }
-    6909c3da-7d8a-4761-9861-843cd872f3eb:
-      id: portland_search_block
-      label: 'Search Api Page search block form with Portland style'
-      provider: portland
-      label_display: '0'
-      region: content
-      weight: -2
-      search_api_page: search_portland_gov
-      size: big
-      context_mapping: {  }
-      uuid: 6909c3da-7d8a-4761-9861-843cd872f3eb
     5f28bb14-a708-467e-a663-2b3917477d74:
       id: 'views_block:top_searches-block_1'
       label: ''
@@ -72,6 +61,16 @@ variant_settings:
       region: content
       weight: -1
       uuid: 5f28bb14-a708-467e-a663-2b3917477d74
+      context_mapping: {  }
+    8fd66517-9a80-4a79-931e-517cbdab21b6:
+      id: search_api_page_form_block
+      label: 'Search Portland.gov'
+      provider: search_api_page
+      label_display: visible
+      region: content
+      weight: -2
+      uuid: 8fd66517-9a80-4a79-931e-517cbdab21b6
+      search_api_page: search_portland_gov
       context_mapping: {  }
   id: panels_variant
   uuid: 90fbbec1-0801-4d59-a49e-9278c74c8fd5
