POWR-620 - added node embed button, fine tuning of views.

--- a/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
@@ -31,9 +31,11 @@ settings:
             - DrupalLink
             - DrupalUnlink
         -
-          name: Media
+          name: Embeds
           items:
             - media_browser
+            - node
+            - node_link
         -
           name: Tools
           items:
