POWR-536 Modify regions and clean up page template

--- a/web/themes/custom/tweme/tweme.info.yml
+++ b/web/themes/custom/tweme/tweme.info.yml
@@ -2,7 +2,7 @@ name: Tweme
 description: Ultra lightweight Bootstrap theme.
 
 type: theme
-# core: 8.x
+core: 8.x
 base theme: classy
 
 libraries:
@@ -12,6 +12,7 @@ stylesheets-remove:
   - '@extlink/extlink.css'
 
 regions:
+  global_admin: Global admin
   pre_header: Pre-header
   header: Header
   primary_menu: Primary menu
@@ -22,9 +23,3 @@ regions:
   content: Content
   footer_first: Footer first
   footer_second: Footer second
-
-# Information added by Drupal.org packaging script on 2017-03-19
-version: '8.x-4.1'
-core: '8.x'
-project: 'tweme'
-datestamp: 1489922290
