POWR-620 incremental commit to test in multidev; added separate document, image and video embed buttons; tweaks to embed buttons, entity browsers and permissions.

--- a/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.embedded.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.media.video.field_transcript
     - media.type.video
   module:
+    - ds
     - video_embed_field
 _core:
   default_config_hash: DSsWBWw_gj2xxlQ12665l-yIIfFWIt7DJX33DGgbEHY
@@ -19,20 +20,34 @@ mode: embedded
 content:
   field_media_video_embed_field:
     type: video_embed_field_video
-    weight: 0
+    weight: 1
     label: hidden
     settings:
+      autoplay: true
       responsive: true
       width: 854
       height: 480
-      autoplay: true
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     region: content
+  name:
+    type: string
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   created: true
   field_media_in_library: true
   field_transcript: true
-  name: true
   thumbnail: true
   uid: true
