--- a/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
@@ -33,9 +33,9 @@ settings:
         -
           name: Embeds
           items:
-            - media_browser
-            - node
-            - node_link
+            - document_browser
+            - image_browser
+            - audio_video_browser
         -
           name: Tools
           items:
