--- a/web/sites/default/config/user.role.anonymous.yml
+++ b/web/sites/default/config/user.role.anonymous.yml
@@ -10,6 +10,7 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'never autoplay videos'
   - 'view field_shortname_or_acronym'
   - 'view media'
   - 'view search api pages'
