--- a/web/sites/default/config/pathauto.pattern.group_audio.yml
+++ b/web/sites/default/config/pathauto.pattern.group_audio.yml
@@ -1,23 +1,23 @@
-uuid: 04dc7132-3c1a-4a56-95d9-2cac4f4ad975
+uuid: 2701979c-f18d-45d7-9210-db4da7e5e9f0
 langcode: en
 status: true
 dependencies:
   module:
     - ctools
     - media
-id: group_video
-label: 'Group video'
+id: group_audio
+label: 'Group audio'
 type: 'canonical_entities:media'
-pattern: '[media:group:field_shortname_or_acronym]/videos/[media:name]'
+pattern: '[media:group:field_shortname_or_acronym]/audios/[media:name]'
 selection_criteria:
-  d014d0b9-71b2-4065-8474-3d5ec2f4fa1d:
+  58c07b6f-5bd9-43e9-9209-902ca362cadf:
     id: 'entity_bundle:media'
     bundles:
-      video: video
+      audio: audio
     negate: false
     context_mapping:
       media: media
-    uuid: d014d0b9-71b2-4065-8474-3d5ec2f4fa1d
+    uuid: 58c07b6f-5bd9-43e9-9209-902ca362cadf
 selection_logic: and
-weight: -1
+weight: 0
 relationships: {  }
