--- a/web/sites/default/config/views.view.group_media.yml
+++ b/web/sites/default/config/views.view.group_media.yml
@@ -1913,44 +1913,6 @@ display:
           entity_type: media
           entity_field: name
           plugin_id: string
-        status:
-          id: status
-          table: media_field_data
-          field: status
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: '1'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: media
-          entity_field: status
-          plugin_id: boolean
       filter_groups:
         operator: AND
         groups:
@@ -2414,7 +2376,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: group/%group/audio
+      path: group/%group/audios
       display_description: ''
       relationships:
         group_content:
@@ -2481,44 +2443,6 @@ display:
           entity_type: media
           entity_field: name
           plugin_id: string
-        status:
-          id: status
-          table: media_field_data
-          field: status
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: '1'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: media
-          entity_field: status
-          plugin_id: boolean
       filter_groups:
         operator: AND
         groups:
@@ -2960,7 +2884,7 @@ display:
           absolute: false
           entity_type: media
           plugin_id: entity_link_edit
-      title: Videos
+      title: Audios
       access:
         type: perm
         options:
