POWR-635 start process of using new tweme branch

--- a/web/sites/default/config/block.block.searchapipagesearchblockform.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockform.yml
@@ -19,7 +19,7 @@ settings:
   id: search_api_page_form_block
   label: 'Search Portland.gov'
   provider: search_api_page
-  label_display: visible
+  label_display: '0'
   search_api_page: search_portland_gov
 visibility:
   request_path:
