--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ Thumbs.db
 ##########
 .sass-cache
 web/themes/custom/**/*.map
-web/themes/custom/cloudy/css/style.css
+web/themes/custom/**/css/style.css
 
 # Things in the core directory that Drupal 8 commits in the repository.
 !web/core/**/*.gz
