--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -73,9 +73,9 @@ content:
     settings:
       title: 'service mode'
       title_plural: 'service modes'
-      edit_mode: closed_expand_nested
+      edit_mode: closed
       closed_mode: preview
-      autocollapse: all
+      autocollapse: none
       closed_mode_threshold: 0
       add_mode: button
       form_display_mode: default
