POWR-398 Adjust uuid for group media config

--- a/web/sites/default/config/group.content_type.bureau_office-group_media-audio.yml
+++ b/web/sites/default/config/group.content_type.bureau_office-group_media-audio.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.bureau_office
     - media.type.audio
   module:
-    - gmedia
+    - groupmedia
     - media
 id: bureau_office-group_media-audio
 label: 'Bureau/office: Group media (Audio)'
