--- a/web/sites/default/config/group.content_type.group_content_type_a4a1ebfac2f7e.yml
+++ b/web/sites/default/config/group.content_type.group_content_type_a4a1ebfac2f7e.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.elected_official
     - media.type.video
   module:
-    - gmedia
+    - groupmedia
     - media
 id: group_content_type_a4a1ebfac2f7e
 label: 'Elected official: Group media (Video)'
