--- a/web/sites/default/config/group.content_type.program-group_media-document.yml
+++ b/web/sites/default/config/group.content_type.program-group_media-document.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.program
     - media.type.document
   module:
-    - gmedia
+    - groupmedia
     - media
 id: program-group_media-document
 label: 'Program: Group media (Document)'
