--- a/web/sites/default/config/group.content_type.program-group_media-image.yml
+++ b/web/sites/default/config/group.content_type.program-group_media-image.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.program
     - media.type.image
   module:
-    - gmedia
+    - groupmedia
     - media
 id: program-group_media-image
 label: 'Program: Group media (Image)'
