--- a/web/sites/default/config/group.content_type.program-group_media-video.yml
+++ b/web/sites/default/config/group.content_type.program-group_media-video.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.program
     - media.type.video
   module:
-    - gmedia
+    - groupmedia
     - media
 id: program-group_media-video
 label: 'Program: Group media (Video)'
