--- a/web/sites/default/config/group.content_type.project-group_media-audio.yml
+++ b/web/sites/default/config/group.content_type.project-group_media-audio.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.project
     - media.type.audio
   module:
-    - gmedia
+    - groupmedia
     - media
 id: project-group_media-audio
 label: 'Project: Group media (Audio)'
