--- a/web/sites/default/config/group.content_type.project-group_media-document.yml
+++ b/web/sites/default/config/group.content_type.project-group_media-document.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.project
     - media.type.document
   module:
-    - gmedia
+    - groupmedia
     - media
 id: project-group_media-document
 label: 'Project: Group media (Document)'
