--- a/web/sites/default/config/group.content_type.project-group_media-image.yml
+++ b/web/sites/default/config/group.content_type.project-group_media-image.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.project
     - media.type.image
   module:
-    - gmedia
+    - groupmedia
     - media
 id: project-group_media-image
 label: 'Project: Group media (Image)'
