--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -55,10 +55,10 @@ module:
   field_ui: 0
   file: 0
   filter: 0
-  gmedia: 0
   gnode: 0
   google_analytics: 0
   group: 0
+  groupmedia: 0
   help: 0
   history: 0
   hsts: 0
