--- a/web/sites/default/config/group.content_type.bureau_office-group_media-image.yml
+++ b/web/sites/default/config/group.content_type.bureau_office-group_media-image.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.bureau_office
     - media.type.image
   module:
-    - gmedia
+    - groupmedia
     - media
 id: bureau_office-group_media-image
 label: 'Bureau/office: Group media (Image)'
