--- a/web/sites/default/config/group.content_type.bureau_office-group_media-video.yml
+++ b/web/sites/default/config/group.content_type.bureau_office-group_media-video.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.bureau_office
     - media.type.video
   module:
-    - gmedia
+    - groupmedia
     - media
 id: bureau_office-group_media-video
 label: 'Bureau/office: Group media (Video)'
