--- a/web/sites/default/config/group.content_type.group_content_type_398e03ff48076.yml
+++ b/web/sites/default/config/group.content_type.group_content_type_398e03ff48076.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.elected_official
     - media.type.audio
   module:
-    - gmedia
+    - groupmedia
     - media
 id: group_content_type_398e03ff48076
 label: 'Elected official: Group media (Audio)'
