--- a/web/sites/default/config/group.content_type.group_content_type_514ca5e9cf6bb.yml
+++ b/web/sites/default/config/group.content_type.group_content_type_514ca5e9cf6bb.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.elected_official
     - media.type.image
   module:
-    - gmedia
+    - groupmedia
     - media
 id: group_content_type_514ca5e9cf6bb
 label: 'Elected official: Group media (Image)'
