--- a/web/sites/default/config/group.content_type.group_content_type_5836a174a609d.yml
+++ b/web/sites/default/config/group.content_type.group_content_type_5836a174a609d.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.bureau_office
     - media.type.document
   module:
-    - gmedia
+    - groupmedia
     - media
 id: group_content_type_5836a174a609d
 label: 'Bureau/office: Group media (Document)'
