--- a/web/sites/default/config/group.content_type.group_content_type_87265bf45fc14.yml
+++ b/web/sites/default/config/group.content_type.group_content_type_87265bf45fc14.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.elected_official
     - media.type.document
   module:
-    - gmedia
+    - groupmedia
     - media
 id: group_content_type_87265bf45fc14
 label: 'Elected official: Group media (Document)'
