--- a/web/sites/default/config/group.content_type.program-group_media-audio.yml
+++ b/web/sites/default/config/group.content_type.program-group_media-audio.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.program
     - media.type.audio
   module:
-    - gmedia
+    - groupmedia
     - media
 id: program-group_media-audio
 label: 'Program: Group media (Audio)'
