--- a/web/sites/default/config/group.content_type.project-group_media-video.yml
+++ b/web/sites/default/config/group.content_type.project-group_media-video.yml
@@ -6,7 +6,7 @@ dependencies:
     - group.type.project
     - media.type.video
   module:
-    - gmedia
+    - groupmedia
     - media
 id: project-group_media-video
 label: 'Project: Group media (Video)'
